# zhangmo

HiCtool/scripts/: HiCtool_TAD_analysis_lib.py
LPM/: CMakeLists.txt  main.cpp
TADtree/: TADtree.py  TADtreelib.py
domaincaller/: __init__.py  chromLev.py  genomeLev.py  renbin.py
ljwlib/: check_genotype.py  debugfile.py  hic_module.py  kmp.sh  run.py  scrab_ucsc.py  softwares.py  sundry.py  tads.py
zmlib/: TAD.sh  TADs.m  TADs.m.bak  compartment_correct_gtf.py  hic_di.py  sparseToDense.py
zmlib/required_modules/pmtk3-2april2011/toolbox/Algorithms/optimization/: emAlgo.m
